--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,44 @@
       <version>2.0.5</version>
     </dependency>
 
+    <!--<dependency>-->
+      <!--<groupId>io.reactivex</groupId>-->
+      <!--<artifactId>rxnetty</artifactId>-->
+      <!--<version>0.5.1</version>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+      <!--<groupId>io.reactivex</groupId>-->
+      <!--<artifactId>rxnetty-http</artifactId>-->
+      <!--<version>0.5.2</version>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+      <!--<groupId>io.reactivex</groupId>-->
+      <!--<artifactId>rxnetty-common</artifactId>-->
+      <!--<version>0.5.2</version>-->
+    <!--</dependency>-->
+    <!-- https://mvnrepository.com/artifact/io.netty/netty-all -->
+    <!--<dependency>-->
+      <!--<groupId>io.netty</groupId>-->
+      <!--<artifactId>netty-all</artifactId>-->
+      <!--<version>4.1.8.Final</version>-->
+    <!--</dependency>-->
+    <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
+    <!--<dependency>-->
+      <!--<groupId>org.apache.httpcomponents</groupId>-->
+      <!--<artifactId>httpclient</artifactId>-->
+      <!--<version>4.5.3</version>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+      <!--<groupId>com.google.guava</groupId>-->
+      <!--<artifactId>guava</artifactId>-->
+      <!--<version>21.0</version>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+      <!--<groupId>commons-io</groupId>-->
+      <!--<artifactId>commons-io</artifactId>-->
+      <!--<version>2.5</version>-->
+    <!--</dependency>-->
+
   </dependencies>
 
 </project>
